--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ VITE_API_KEY=api_key=e51cb99636aec53ab468b685febc633a
 VITE_API=https://api.themoviedb.org/3/movie/
 VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_IMG=https://image.tmdb.org/t/p/w1280/
+VITE_IMG_BACKDROP=https://image.tmdb.org/t/p/original/
 VITE_GENRES=https://api.themoviedb.org/3/genre/movie/list
