--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 VITE_API_KEY=api_key=e51cb99636aec53ab468b685febc633a
 VITE_API_MOVIES=https://api.themoviedb.org/3/movie/
 VITE_API_SERIES=https://api.themoviedb.org/3/tv/
-VITE_SEARCH=https://api.themoviedb.org/3/search/movie
+VITE_SEARCH=https://api.themoviedb.org/3/search/multi
 VITE_IMG_POSTER=https://image.tmdb.org/t/p/w1280/
 VITE_IMG_BACKDROP=https://image.tmdb.org/t/p/original/
 VITE_GENRES=https://api.themoviedb.org/3/genre/movie/list
+VITE_GENRES_SERIES=https://api.themoviedb.org/3/genre/tv/list
